crates/monosecret/src/snapshots/monosecret__config__validation_tests__manifest_applies_profile_defaults_and_default_profile_fallback.snap
---
source: crates/monosecret/src/config.rs
expression: manifest_json
---
{
  "groups": {
    "backend": "Backend services"
  },
  "profiles": {
    "default": {
      "secrets": {
        "DATABASE_URL": {
          "asPath": false,
          "groups": [
            "backend"
          ],
          "hasDefault": false,
          "required": true
        },
        "LOG_LEVEL": {
          "asPath": false,
          "groups": [],
          "hasDefault": true,
          "required": false
        },
        "TLS_CERT": {
          "asPath": true,
          "groups": [],
          "hasDefault": false,
          "required": true
        }
      }
    },
    "development": {
      "secrets": {
        "DATABASE_URL": {
          "asPath": false,
          "groups": [
            "backend"
          ],
          "hasDefault": true,
          "required": true
        },
        "DEBUG_TOKEN": {
          "asPath": false,
          "groups": [],
          "hasDefault": false,
          "required": false
        },
        "LOG_LEVEL": {
          "asPath": false,
          "groups": [],
          "hasDefault": true,
          "required": false
        },
        "TLS_CERT": {
          "asPath": true,
          "groups": [],
          "hasDefault": false,
          "required": false
        }
      }
    },
    "production": {
      "secrets": {
        "API_KEY": {
          "asPath": false,
          "groups": [],
          "hasDefault": false,
          "required": true
        },
        "DATABASE_URL": {
          "asPath": false,
          "groups": [
            "backend"
          ],
          "hasDefault": false,
          "required": true
        },
        "LOG_LEVEL": {
          "asPath": false,
          "groups": [],
          "hasDefault": true,
          "required": false
        },
        "TLS_CERT": {
          "asPath": true,
          "groups": [],
          "hasDefault": false,
          "required": true
        }
      }
    }
  },
  "project": {
    "name": "demo",
    "revision": "1.0"
  }
}
