crates/monosecret/src/snapshots/monosecret__config__validation_tests__manifest_serializes_camel_case_metadata.snap
---
source: crates/monosecret/src/config.rs
expression: json
---
{
  "groups": {},
  "profiles": {
    "default": {
      "secrets": {
        "TOKEN": {
          "asPath": true,
          "groups": [],
          "hasDefault": false,
          "required": true
        }
      }
    }
  },
  "project": {
    "name": "demo",
    "revision": "1.0"
  }
}
